--- a/src/app/home/movie/movie-detail/movie-detail.component.html
+++ b/src/app/home/movie/movie-detail/movie-detail.component.html
@@ -1,3 +1,5 @@
-<p>
-  Detail works!
-</p>
+<div class="main-content" style="--imageUrl:url({{imageBaseUrl}}/original/{{detail.backdrop_path}})">
+  <div class="card-content">
+    {{detail | json}}
+  </div>
+</div>
