--- a/src/app/home/movie/movie-list/movie-list.component.html
+++ b/src/app/home/movie/movie-list/movie-list.component.html
@@ -30,7 +30,7 @@
 <div class="main-content">
   <div *ngIf="detail" style="display: flex; justify-content: center; align-items: center; flex-wrap:wrap">
     <ng-container *ngFor="let data of detail.results">
-      <mat-card class="card-size">
+      <mat-card class="card-size" style="cursor: pointer" (click)="onDetail(data)">
         <mat-card-header>
           <div style="height: 2.5rem;">
             <mat-card-title
