--- a/src/app/home/movie/movie-list/movie-list.component.scss
+++ b/src/app/home/movie/movie-list/movie-list.component.scss
@@ -53,3 +53,9 @@ mat-card-actions {
     margin-bottom: 5px;
     color: pink;
 }
+
+mat-paginator {
+    background-color: #434343;
+    border-radius: 1rem;
+    margin-top: -15px;
+}
